# quicklogging

./: .travis.yml  Changelog.rst  LICENSE  Makefile  README.md  README.rst  conf.py  logging_survival.rst  meta.yaml  pypidesc.rst  pyproject.toml  setup.cfg  setup.py  source_doc.rst  task_oriented.rst  update_po_files.sh  user_guide.rst
.github/workflows/: python-package.yml
locale/fr/LC_MESSAGES/: README.po  logging_survival.po  source_doc.po  task_oriented.po  user_guide.po
quicklogging/: __init__.py
tests/: __init__.py  catch_prints.py  conftest.py  test_quicklogging.py
