[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quicklogging"
version = "0.4.1"
description = "logging made easy, can convert print() calls into logs without changing code"
authors = [{name = "Feth AREZKI (majerti)", email = "feth.arezki@majerti.fr"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: System :: Logging",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.rst"
license = "MIT"
license-files = [
    "LICENSE",
]
requires-python = ">=3.2"

[project.urls]
HomePage = "https://github.com/majerteam/quicklogging"
DOWNLOAD = "https://pypi.org/project/quicklogging/#files"

[project.optional-dependencies]
test = [
    "pytest-runner",
    "pytest",
    "pytest-cov",
    "six",
    "stringimporter>=0.1.3",
]

[tool.setuptools]
packages = ["quicklogging"]
include-package-data = false

[tool.setuptools.dynamic]
readme = {file = ["pypidesc.rst", "CHANGELOG.rst"], content-type = "text/x-rst"}

[tool.distutils.bdist_wheel]
universal = 1

[tool.pytest.ini_options]
addopts = """
--strict-markers
--maxfail=2
--cov=quicklogging --cov-report=term-missing
--capture=no
-p no:logging"""

[tool.aliases]
test = "pytest"
