[metadata]
name = quicklogging
version = 0.3.1
description = helper for easy logging when you're used to print
long_description = file: pypidesc.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
author = "Feth AREZKI (majerti)"
author_email = "feth.arezki@majerti.fr"
url = "https://github.com/majerteam/quicklogging"

[options]
packages =
    quicklogging


[options.extras_require]
test =
    pytest-runner
    pytest
    pytest-cov
    six
    stringimporter>=0.1.3



[bdist_wheel]
universal = 1

[tool:pytest]
addopts = 
 --strict-markers
 --maxfail=2
 --cov=quicklogging --cov-report=term-missing
 --capture=no
 -p no:logging

[aliases]
test=pytest
